--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ plotly=4.4.1=py_0
 prometheus_client=0.7.1=py_0
 prompt_toolkit=3.0.2=py_0
 ptyprocess=0.6.0=py37_0
+pycountry=19.8.18=pypi_0
 pygments=2.5.2=py_0
 pyparsing=2.4.6=pypi_0
 pyqt=5.9.2=py37h655552a_0
